--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,23 @@
 language: ruby
+rvm:
+  - 2.6.3
+
+before_script:
+  - chmod +x ./script/cibuild
+
+script: ./script/cibuild
+
+branches:
+  only:
+    - gh-pages
+    - /pages-(.*)/
+
+addons:
+  apt:
+    packages:
+      - libcurl4-openssl-dev
+
 cache: bundler
-rvm: 2.5
 
-before_install:
-  - gem update --system --no-document
-  - gem install bundler --no-document
-
-script: script/cibuild
-
-env:
-  matrix:
-    - JEKYLL_VERSION="~> 3.8"
-    - JEKYLL_VERSION="~> 4.0"
+notifications:
+  email: false
